package personal.template;

public class PizzaRecipe extends RecipeTemplate {
	@Override
	public void cook() {
		System.out.println("Baking the pizza at 400 degrees F");
	}
}