package personal.template;

public class SaladRecipe extends RecipeTemplate {
	@Override
	public void cook() {
		System.out.println("Tossing the salad ingredients");
	}
}